<resources>
    <string name="app_name">RegisterExercise</string>
    <string name="registration">Registration</string>
    <string name="user_name">User name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit_button">submit</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

</resources>