<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:layout_gravity="center"
         />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_margin="15dp"
        />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:hint="@string/phone_number"
        android:inputType="phone" />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_margin="15dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:inputType="textPassword"
        android:layout_margin="15dp"
        android:hint="@string/confirm_password"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:text="@string/submit_button" />



</LinearLayout>